Fix main area overflow

--- a/css/distrib/namespaced.less
+++ b/css/distrib/namespaced.less
@@ -352,9 +352,10 @@ main aside.gutter {
     margin-right: @ico-margin + @ico-width + @ico-margin;
 }
 
-main > .flex,
+#namespaced__main_subflex,
 article {
     width: 100%;
+    overflow: auto;
 }
 
 #namespaced__aside {
