--- a/css/src/namespaced.less
+++ b/css/src/namespaced.less
@@ -281,9 +281,10 @@ main aside.gutter {
     margin-left: @ico-margin + @ico-width + @ico-margin;
 }
 
-main > .flex,
+#namespaced__main_subflex,
 article {
     width: 100%;
+    overflow: auto;
 }
 
 #namespaced__aside {
